--- a/config/database.yml
+++ b/config/database.yml
@@ -10,7 +10,7 @@ development:
   database: wash_depot_development
   pool: 5
   username: root
-  password: 
+  password: remeta
   host: 127.0.0.1
 
 # Warning: The database defined as "test" will be erased and
